Usuarios en panel, dashboard

--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -1,3 +1,9 @@
+    .result-row{
+        border-top: rgb(144,144,144);
+        border-top-width: 1px;
+        border-top-style: solid;
+    }
+
     .float-button{
         position: fixed;
         right: 20;
