Modelo y controlador de ventas

--- a/public/css/material-table.css
+++ b/public/css/material-table.css
@@ -1,7 +1,9 @@
     md-table{
+/*
         border-style: solid;
         border-color: rgb(244,244,244);
         border-width: 1px;
+*/
         display: block;
         padding-left: 16px;
         padding-right: 16px;
