--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -43,3 +43,21 @@
         width: 150px;
         margin: 10px 0 0 0;
     }
+
+    fieldset{
+        border-color: rgb(192,192,192);
+        border-style: solid;
+        background-color: rgb(244,244,244);
+    }
+
+    #dash-view > div > fieldset > div > div.flex{
+        position: relative;
+    }
+
+    fieldset > div > div.flex > button{    
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        background-color: rgb(192,192,192);
+        color: rgb(80,80,80);
+    }
